# KQED

./: .gitignore  AUTHORS  ChangeLog  Makefile.am  NEWS  README  README.md  configure.ac
PRECOMP/: REGexample10.txt  REGexample2.txt  REGexample4.txt  REGexample5.txt  REGexample6.txt  REGexample7.txt  REGress.sh
m4/: ax_cuda.m4
src/: Makefile.am  amu_forlattice.c
src/CULIBFILES/: KQED.h  cheby.h  chnr_dT.cu  chnr_dT.h  getff-new.cu
src/HEADERS/: KQED.h  QED_kernel.h  QED_kernel_xy0.h  SYMXY.h  SYMXY0.h  Tabd.h  all_kernels.h  cheby.h  chnr_dS.h  chnr_dT.h  chnr_dV.h  con_kernel.h  corr_malloc.h  getff-new.h  kernels.h  pi_pert.h  simd.h  sub_kernel.h
src/LIBFILES/: QED_kernel.c  QED_kernel_xy0.c  SYMXY.c  SYMXY0.c  Tabd.c  all_kernels.c  cheby.c  chnr_dS.c  chnr_dT.c  chnr_dV.c  con_kernel.c  getff-new.c  init.c  io.c  kernels.c  pi_pert.c  simd.c  sub_kernel.c
src/UTILS/: GLU_bswap.c
src_cuda/: Makefile.am  amu_forlattice.c  amu_forlattice.cu
src_cuda/HEADERS/: GLU_bswap.h  GLU_timer.h  KQED.h  QED_kernel.h  QED_kernel_xy0.h  SYMXY.h  SYMXY0.h  Tabd.h  all_kernels.h  cheby.h  chnr_dS.h  chnr_dT.h  chnr_dV.h  con_kernel.h  crc32c.h  cu_util.h  getff-new.h  init.h  io.h  kernels.h  pi_pert.h  sub_kernel.h
src_cuda/LIBFILES/: KQED.cu  QED_kernel.cu  QED_kernel_xy0.cu  SYMXY.cu  SYMXY0.cu  Tabd.cu  all_kernels.cu  cheby.cu  chnr_dS.cu  chnr_dT.cu  chnr_dV.cu  con_kernel.cu  getff-new.cu  init.c  init.cu  io.c  io.cu  kernels.cu  pi_pert.cu  sub_kernel.cu
src_cuda/UTILS/: GLU_timer.c  corr_malloc.c  crc32c.c
